--- a/test/GeoJSONViewer.tmpl
+++ b/test/GeoJSONViewer.tmpl
@@ -119,6 +119,13 @@
                 weight: 3,
                 opacity: 0.8,
                 fillOpacity: 0.4
+              },
+              MultiPolygon: {
+                fillColor: "#0000ff",
+                color: "#0000ff",
+                weight: 1,
+                opacity: 0.3,
+                fillOpacity: 0.1
               }
             },
             layers = [];
