--- a/test/GeoJSONViewer.tmpl
+++ b/test/GeoJSONViewer.tmpl
@@ -117,15 +117,15 @@
                 fillColor: "#ff7800",
                 color: "#ff7800",
                 weight: 3,
-                opacity: 0.8,
+                opacity: 1,
                 fillOpacity: 0.4
               },
               MultiPolygon: {
                 fillColor: "#0000ff",
-                color: "#0000ff",
+                //color: "#0000ff",
                 weight: 1,
-                opacity: 0.3,
-                fillOpacity: 0.1
+                opacity: 0.2,
+                fillOpacity: 0.2
               }
             },
             layers = [];
